--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <body>
   <h1>BRIN</h1>
   <p>Share the Waves</p>
+ <p>We crash, We are a force</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
  
